# aoa_delta

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.4.8-pre1  CMakeLists.txt.user.d7b8e8e.21  Dockerfile  README.md  aoa_app.conf  aoa_delta.creator.user.4.8-pre1  aoa_delta.files  aoa_delta.includes
daq_ana/: CMakeLists.txt  DAQAnalysis.h  DAQMyAna.h  daqanalysis.cpp  doocsRawOpenExample.cpp  ladybug.cpp  ttf2Looper.cc  ttf2Looper.h
daqsnap/: .temp.xml  CMakeLists.txt  doocstest.cpp  open_example.cpp  snap.sh  txt2bit.cpp  user_test  xmlsnap.sh
data_test/: CMakeLists.txt  data_set.json  data_test.cpp
matlab_code/: CMakeLists.txt  README_TO_ADD_NEW_MATLAB_CODE  f_calib_and_res_gen_ukf.h  f_calib_and_res_gen_ukf_not_so_old.h  f_calib_and_res_gen_ukf_old.h  f_generate_and_eval_multi_residuals.h  f_generate_and_eval_multi_residuals_dwfix.h  f_generate_and_eval_multi_residuals_dwql.h  f_generate_and_eval_residual.h  f_generate_and_eval_residual2.h  f_generate_and_eval_residual3.h  f_generate_and_eval_residual4.h  f_generate_and_eval_residual5.h  f_generate_and_eval_residual6.h  f_generate_and_eval_residual7.h  f_generate_and_eval_residual8.h  generate_CMakeListsandheaders.sh
matlab_code/f_calib_and_res_gen_ukf/: CMakeLists.txt  abs.c  abs.h  buildInfo.mat  calcSigmaPoints.c  calcSigmaPoints.h  codeInfo.mat  combine_vector_elements.c  combine_vector_elements.h  exp.c  exp.h  f_calib_and_res_gen_ukf.c  f_calib_and_res_gen_ukf.h  f_calib_and_res_gen_ukf_emxAPI.c  f_calib_and_res_gen_ukf_emxAPI.h  f_calib_and_res_gen_ukf_emxutil.c  f_calib_and_res_gen_ukf_emxutil.h  f_calib_and_res_gen_ukf_initialize.c  f_calib_and_res_gen_ukf_initialize.h  f_calib_and_res_gen_ukf_rtw.bat  f_calib_and_res_gen_ukf_rtw.mk  f_calib_and_res_gen_ukf_rtwutil.c  f_calib_and_res_gen_ukf_rtwutil.h  f_calib_and_res_gen_ukf_terminate.c  f_calib_and_res_gen_ukf_terminate.h  f_calib_and_res_gen_ukf_types.h  f_cavitySystem.c  f_cavitySystem.h  f_compute_ukf_residual.c  f_compute_ukf_residual.h  f_get_calCoeff_codegen.c  f_get_calCoeff_codegen.h  inv.c  inv.h  ixamax.c  ixamax.h  log.c  log.h  mldivide.c  mldivide.h  (+25 more)
matlab_code/f_calib_and_res_gen_ukf_not_so_old/: CMakeLists.txt  abs.c  abs.h  buildInfo.mat  calcSigmaPoints.c  calcSigmaPoints.h  codeInfo.mat  combine_vector_elements.c  combine_vector_elements.h  exp.c  exp.h  f_calib_and_res_gen_ukf.c  f_calib_and_res_gen_ukf.h  f_calib_and_res_gen_ukf_emxAPI.c  f_calib_and_res_gen_ukf_emxAPI.h  f_calib_and_res_gen_ukf_emxutil.c  f_calib_and_res_gen_ukf_emxutil.h  f_calib_and_res_gen_ukf_initialize.c  f_calib_and_res_gen_ukf_initialize.h  f_calib_and_res_gen_ukf_rtwutil.c  f_calib_and_res_gen_ukf_rtwutil.h  f_calib_and_res_gen_ukf_terminate.c  f_calib_and_res_gen_ukf_terminate.h  f_calib_and_res_gen_ukf_types.h  f_cavitySystem.c  f_cavitySystem.h  f_compute_ukf_residual.c  f_compute_ukf_residual.h  f_get_calCoeff_codegen.c  f_get_calCoeff_codegen.h  inv.c  inv.h  ixamax.c  ixamax.h  log.c  log.h  mldivide.c  mldivide.h  recip.c  recip.h  (+23 more)
matlab_code/f_calib_and_res_gen_ukf_old/: CMakeLists.txt  abs.c  abs.h  buildInfo.mat  calcSigmaPoints.c  calcSigmaPoints.h  codeInfo.mat  combine_vector_elements.c  combine_vector_elements.h  exp.c  exp.h  f_calib_and_res_gen_ukf.c  f_calib_and_res_gen_ukf.h  f_calib_and_res_gen_ukf_emxAPI.c  f_calib_and_res_gen_ukf_emxAPI.h  f_calib_and_res_gen_ukf_emxutil.c  f_calib_and_res_gen_ukf_emxutil.h  f_calib_and_res_gen_ukf_initialize.c  f_calib_and_res_gen_ukf_initialize.h  f_calib_and_res_gen_ukf_rtw.mk  f_calib_and_res_gen_ukf_rtwutil.c  f_calib_and_res_gen_ukf_rtwutil.h  f_calib_and_res_gen_ukf_terminate.c  f_calib_and_res_gen_ukf_terminate.h  f_calib_and_res_gen_ukf_types.h  f_cavitySystem.c  f_cavitySystem.h  f_compute_ukf_residual.c  f_compute_ukf_residual.h  f_get_calCoeff_codegen.c  f_get_calCoeff_codegen.h  inv.c  inv.h  ixamax.c  ixamax.h  log.c  log.h  mldivide.c  mldivide.h  recip.c  (+25 more)
matlab_code/f_generate_and_eval_multi_residuals/: CMakeLists.txt  UnscentedKalmanFilter1.c  UnscentedKalmanFilter1.h  abs.c  abs.h  calcSigmaPoints.c  calcSigmaPoints.h  calcUTParameters.c  calcUTParameters.h  conv.c  conv.h  diff.c  diff.h  eps.c  eps.h  exp.c  exp.h  f_GLT.c  f_GLT.h  f_calibrateData.c  f_calibrateData.h  f_cavitySystem.c  f_cavitySystem.h  f_computeQL.c  f_computeQL.h  f_compute_detuning.c  f_compute_detuning.h  f_compute_parity_Res1_full.c  f_compute_parity_Res1_full.h  f_compute_parity_Res2_full.c  f_compute_parity_Res2_full.h  f_compute_ukf_residual_not_pers.c  f_compute_ukf_residual_not_pers.h  f_generate_and_eval_multi_residuals.c  f_generate_and_eval_multi_residuals.h  f_generate_and_eval_multi_residuals_data.c  f_generate_and_eval_multi_residuals_data.h  f_generate_and_eval_multi_residuals_emxAPI.c  f_generate_and_eval_multi_residuals_emxAPI.h  f_generate_and_eval_multi_residuals_emxutil.c  (+71 more)
matlab_code/f_generate_and_eval_multi_residuals_dwfix/: CMakeLists.txt  UnscentedKalmanFilter1.c  UnscentedKalmanFilter1.h  abs.c  abs.h  buildInfo.mat  calcSigmaPoints.c  calcSigmaPoints.h  calcUTParameters.c  calcUTParameters.h  codeInfo.mat  conv.c  conv.h  cov.c  cov.h  eig.c  eig.h  eps.c  eps.h  exp.c  exp.h  f_GLT.c  f_GLT.h  f_calibrateData.c  f_calibrateData.h  f_cavitySystem.c  f_cavitySystem.h  f_computeQL.c  f_computeQL.h  f_compute_detuning.c  f_compute_detuning.h  f_compute_parity_Res1_full.c  f_compute_parity_Res1_full.h  f_compute_parity_Res2_full.c  (+102 more)
tools/: CMakeLists.txt  README  array_max.sh  array_max_run1138.sh  array_max_run1143.sh  array_max_run1146.sh  array_max_run1261.sh  array_max_run1262.sh  getFileList.cc  getStartAndArraySizeForRuns  getStartAndArraySizeForRuns.cc  makeNewIndex.sh  max.sh  maxMerge.sh  maxMerge2.sh  maxMergeFiles.sh  maxMerge_Mona_Catwright.sh  maxTest.sh  mergeA17.sh  mergeA17run1138.sh  mergeA17run1143.sh  mergeA17run1146.sh  mergeDat.sh  mergeFiles.cc  run.sh  runDocker.sh  runParameter_example.run  runsbatch.sh  sbatchArray.sh  setFixedParameter.sh  setFixedParameter_template.sh  setStartAndLengthFromRuns.sh  startArrayOnMax.sh  testJob.sh  testParal.sh
(+3332 files in other folders)
