add_library(f_generate_and_eval_multi_residuals_dwfix  SHARED
abs.c
calcSigmaPoints.c
calcUTParameters.c
conv.c
cov.c
eig.c
eps.c
exp.c
f_calibrateData.c
f_cavitySystem.c
f_compute_detuning.c
f_compute_parity_Res1_full.c
f_compute_parity_Res2_full.c
f_computeQL.c
f_compute_ukf_residual_fixdw.c
f_compute_ukf_residual_not_pers.c
f_generate_and_eval_multi_residuals_dwfix.c
f_generate_and_eval_multi_residuals_dwfix_data.c
f_generate_and_eval_multi_residuals_dwfix_emxAPI.c
f_generate_and_eval_multi_residuals_dwfix_emxutil.c
f_generate_and_eval_multi_residuals_dwfix_initialize.c
f_generate_and_eval_multi_residuals_dwfix_rtwutil.c
f_generate_and_eval_multi_residuals_dwfix_terminate.c
f_generate_online_parityRes1_full.c
f_generate_online_parityRes2_full.c
f_generate_online_UKF_residual_full.c
f_generate_online_UKF_residual_full_dwfix.c
f_GLT.c
filter.c
inv.c
isSymmetricPositiveSemiDefinite.c
mean.c
median.c
mldivide.c
power.c
quickselect.c
rdivide.c
rtGetInf.c
rtGetNaN.c
rt_nonfinite.c
sort1.c
sort3.c
sortIdx.c
sqrt.c
sum.c
svd.c
UnscentedKalmanFilter1.c
unscentedKalmanFilter.c
var.c
xaxpy.c
xdhseqr.c
xdlanv2.c
xdotc.c
xgehrd.c
xhseqr.c
xnrm2.c
xrot.c
xrotg.c
xscal.c
xswap.c
xzgeev.c
xzhgeqz.c
xzlarfg.c
xzlartg.c
)
