add_library(f_generate_and_eval_multi_residuals_dwql  SHARED
calcSigmaPoints.c
colon.c
cov.c
diff.c
exp.c
f_calibrateData.c
f_cavitySystem.c
f_comp_dw_ql_Rybaniec.c
f_compute_parity_Res2_full.c
f_computeQL.c
f_compute_ukf_residual_fixdw.c
f_compute_ukf_residual_not_pers.c
f_generate_and_eval_multi_residuals_dwql.c
f_generate_and_eval_multi_residuals_dwql_data.c
f_generate_and_eval_multi_residuals_dwql_emxAPI.c
f_generate_and_eval_multi_residuals_dwql_emxutil.c
f_generate_and_eval_multi_residuals_dwql_initialize.c
f_generate_and_eval_multi_residuals_dwql_rtwutil.c
f_generate_and_eval_multi_residuals_dwql_terminate.c
f_generate_online_parityRes1_full.c
f_generate_online_parityRes2_full.c
f_generate_online_UKF_residual_full.c
f_generate_online_UKF_residual_full_dwfix.c
f_GLT.c
filter.c
find.c
inv.c
isSymmetricPositiveSemiDefinite.c
mean.c
median.c
minOrMax.c
mode.c
movmean.c
quickselect.c
repmat.c
rtGetInf.c
rtGetNaN.c
rt_nonfinite.c
smoothdata.c
sort.c
sortIdx.c
svd.c
UnscentedKalmanFilter.c
var.c
xaxpy.c
xdotc.c
xnrm2.c
xrot.c
xrotg.c
xswap.c
)
