add_library(f_generate_and_eval_residual  SHARED
UnscentedKalmanFilter1.c
calcSigmaPoints.c
exp.c
f_cavitySystem.c
f_compute_ukf_residual_not_pers.c
f_generate_and_eval_residual.c
f_generate_and_eval_residual_emxAPI.c
f_generate_and_eval_residual_emxutil.c
f_generate_and_eval_residual_initialize.c
f_generate_and_eval_residual_rtwutil.c
f_generate_and_eval_residual_terminate.c
f_generate_online_UKF_residual_full.c
inv.c
isSymmetricPositiveSemiDefinite.c
mldivide.c
rtGetInf.c
rtGetNaN.c
rt_nonfinite.c
sqrt.c
unscentedKalmanFilter.c
xdhseqr.c
xdlanv2.c
xgehrd.c
xhseqr.c
xnrm2.c
xzgeev.c
xzhgeqz.c
xzlarfg.c
xzlartg.c
)
